--- a/mp08/p6/index.html
+++ b/mp08/p6/index.html
@@ -375,6 +375,8 @@ public class MainActivity extends AppCompatActivity implements View.OnClickListe
 </td><td colspan="1" rowspan="1"><p>Lento</p>
 </td></tr>
 </table>
+<aside class="special"><p>Más info sobre <strong>Guardar el Estado de una UI</strong>: <a href="https://developer.android.com/topic/libraries/architecture/saving-states.html" target="_blank">https://developer.android.com/topic/libraries/architecture/saving-states.html</a></p>
+</aside>
 <p>En futuras prácticas aprenderemos cómo crear un <strong>Repositorio </strong>de datos que permita la lectura/escritura de datos de una base de datos o de un servicio de red.</p>
 <p class="image-container"><img style="width: 367.00px" src="img\38f53ff6ec78f4a6.png"></p>
 <aside class="special"><p>Obtén más info acerca de la Arquitectura de aplicación en <a href="https://developer.android.com/jetpack/docs/guide" target="_blank">https://developer.android.com/jetpack/docs/guide</a></p>
