--- a/mp08/p6/index.html
+++ b/mp08/p6/index.html
@@ -348,24 +348,24 @@ public class MainActivity extends AppCompatActivity implements View.OnClickListe
 </td><td colspan="1" rowspan="1"><p>Disco o red</p>
 </td></tr>
 <tr><td colspan="1" rowspan="1"><p>Sobrevive la rotación</p>
-</td><td colspan="1" rowspan="1"><p>Sí</p>
-</td><td colspan="1" rowspan="1"><p>Sí</p>
-</td><td colspan="1" rowspan="1"><p>Sí</p>
+</td><td colspan="1" rowspan="1"><p><strong>Sí</strong></p>
+</td><td colspan="1" rowspan="1"><p><strong>Sí</strong></p>
+</td><td colspan="1" rowspan="1"><p><strong>Sí</strong></p>
 </td></tr>
 <tr><td colspan="1" rowspan="1"><p>Sobrevive la finalización por parte del sistema</p>
-</td><td colspan="1" rowspan="1"><p>No</p>
-</td><td colspan="1" rowspan="1"><p>Sí</p>
-</td><td colspan="1" rowspan="1"><p>Sí</p>
+</td><td colspan="1" rowspan="1"><p><strong>No</strong></p>
+</td><td colspan="1" rowspan="1"><p><strong>Sí</strong></p>
+</td><td colspan="1" rowspan="1"><p><strong>Sí</strong></p>
 </td></tr>
 <tr><td colspan="1" rowspan="1"><p>Sobrevive la finalización por parte del usuario</p>
-</td><td colspan="1" rowspan="1"><p>No</p>
-</td><td colspan="1" rowspan="1"><p>No</p>
-</td><td colspan="1" rowspan="1"><p>Sí</p>
+</td><td colspan="1" rowspan="1"><p><strong>No</strong></p>
+</td><td colspan="1" rowspan="1"><p><strong>No</strong></p>
+</td><td colspan="1" rowspan="1"><p><strong>Sí</strong></p>
 </td></tr>
 <tr><td colspan="1" rowspan="1"><p>Limitaciones</p>
 </td><td colspan="1" rowspan="1"><p>Se pueden guardar Objetos complejos.</p>
 <p>Espacio limitado por la memoria</p>
-</td><td colspan="1" rowspan="1"><p>Solo se pueden guardar datos primitivos.</p>
+</td><td colspan="1" rowspan="1"><p>Solo se pueden guardar datos primitivos y Strings.</p>
 <p>Espacio limitado por el disco</p>
 </td><td colspan="1" rowspan="1"><p>Espacio limitado por el disco, y por el coste/velocidad de la red.</p>
 </td></tr>
