--- a/mp08/p6/index.html
+++ b/mp08/p6/index.html
@@ -338,7 +338,8 @@ public class MainActivity extends AppCompatActivity implements View.OnClickListe
         <p>Es importante comprender que el ViewModel sobrevive a la rotación de la pantalla, pero sin embargo se destruye cuando la app finaliza (la cierra el usuario o el sistema).</p>
 <p>La siguiente tabla muestra las opciones que tenemos para salvar los datos:</p>
 <table>
-<tr><td colspan="1" rowspan="1"><p><strong>ViewModel</strong></p>
+<tr><td colspan="1" rowspan="1"><p><strong>/</strong></p>
+</td><td colspan="1" rowspan="1"><p><strong>ViewModel</strong></p>
 </td><td colspan="1" rowspan="1"><p><strong>Saved instance state</strong></p>
 </td><td colspan="1" rowspan="1"><p><strong>Persistent storage</strong></p>
 </td></tr>
@@ -364,9 +365,9 @@ public class MainActivity extends AppCompatActivity implements View.OnClickListe
 </td></tr>
 <tr><td colspan="1" rowspan="1"><p>Limitaciones</p>
 </td><td colspan="1" rowspan="1"><p>Se pueden guardar Objetos complejos.</p>
-<p>Espacio limitado por la memoria</p>
+<p>Espacio limitado por la memoria.</p>
 </td><td colspan="1" rowspan="1"><p>Solo se pueden guardar datos primitivos y Strings.</p>
-<p>Espacio limitado por el disco</p>
+<p>Espacio limitado por el disco.</p>
 </td><td colspan="1" rowspan="1"><p>Espacio limitado por el disco, y por el coste/velocidad de la red.</p>
 </td></tr>
 <tr><td colspan="1" rowspan="1"><p>Tiempo de lectura/escritura</p>
