--- a/mp03/codelab2/index.html
+++ b/mp03/codelab2/index.html
@@ -124,50 +124,67 @@
       <google-codelab-step label="Pinta l&#39;objecte sun" duration="0">
         <p>Per a dibuixar els objectes a la pantalla utilizarem la Classe <code>JFrame</code>, de la biblioteca gràfica <code>Swing</code>, per a crear una finestra que serà el nostre llenç (<em>canvas</em>). De moment no és necesari que comprenguis aquesta Classe. Simplement copia i enganxa.</p>
 <p>Crea una Classe nova anomenada <code>Canvas</code> i escriu en ella el següent codi:</p>
-<pre><code>import java.awt.*;
+<pre><code>import javax.swing.*;
+import java.awt.*;
+import java.util.ArrayList;
+import java.util.List;
 
-public class Canvas extends javax.swing.JFrame {
-    static Graphics2D g;
+public class Canvas extends javax.swing.JPanel {
+   static Canvas canvas;
 
-    public Canvas() {
-        setSize(600, 400);
-        setVisible(true);
-        setDefaultCloseOperation(EXIT_ON_CLOSE);
-        java.awt.Canvas canvas = new java.awt.Canvas();
-        canvas.setPreferredSize(new Dimension(600, 400));
-        canvas.setIgnoreRepaint(true);
-        add(canvas);
-        g = (Graphics2D) canvas.getGraphics();
-        pack();
-    }
+   static Graphics2D g;
+   List&lt;Object&gt; objects = new ArrayList&lt;&gt;();
 
-    public static synchronized void draw(Circle c) {
-        if(g==null) {
-            new Canvas();
-            wait(200);
-        }
-        g.setColor(c.color);
-        g.fillOval(c.positionX, c.positionY, c.radius * 2, c.radius * 2);
-    }
+   public Canvas() {
+       JFrame frame = new JFrame();
+       frame.add(this);
 
-    public static void draw(Rectangle r) {
-        new Canvas();
-        g.setColor(r.color);
-        g.fillRect(r.positionX, r.positionY, r.width, r.height);
-    }
+       frame.setSize(600, 400);
+       frame.setVisible(true);
+       frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+   }
 
-    public static void draw(Triangle t){
-        new Canvas();
-        g.setColor(t.color);
-        g.fillPolygon(new int[]{t.positionX,t.positionX+t.width/2,t.positionX+t.width},
-                new int[]{t.positionY+t.height,t.positionY,t.positionY+t.height},
-                3);
-    }
+   static synchronized void init(){
+       if(canvas==null) {
+           canvas = new Canvas();
+       }
+   }
 
-    public static void wait(int millis){
-        try { Thread.sleep(millis); } catch (Exception e) {}
-    }
-}</code></pre>
+   @Override
+   public void paint(Graphics g) {
+       for(Object o: objects){
+           if(o.getClass().getName().endsWith(&#34;.Circle&#34;)){
+               Circle c = (Circle) o;
+               g.setColor(c.color);
+               g.fillOval(c.positionX, c.positionY, c.radius * 2, c.radius * 2);
+           } else if(o.getClass().getName().endsWith(&#34;.Rectangle&#34;)){
+               Rectangle r = (Rectangle) o;
+               g.setColor(r.color);
+               g.fillRect(r.positionX, r.positionY, r.width, r.height);
+           } else if(o.getClass().getName().endsWith(&#34;.Triangle&#34;)){
+               Triangle t = (Triangle) o;
+               g.setColor(t.color);
+               g.fillPolygon(new int[]{t.positionX,t.positionX+t.width/2,t.positionX+t.width},
+                       new int[]{t.positionY+t.height,t.positionY,t.positionY+t.height},
+                       3);
+           }
+       }
+   }
+
+   public static synchronized void draw(Circle c) {
+       init();
+       canvas.objects.add(c);
+   }
+
+   public static synchronized void draw(Rectangle r) {
+       init();
+       canvas.objects.add(r);
+   }
+
+   public static synchronized void draw(Triangle t){
+       init();
+       canvas.objects.add(t);
+   }</code></pre>
 <h2 is-upgraded>Usa la classe  <code>Canvas </code>per a dibuixar les figures </h2>
 <p>Afegeix al mètode  <code>main</code>  el següent codi:</p>
 <pre><code>Canvas.draw(sun);</code></pre>
