--- a/mp03/codelab2/index.html
+++ b/mp03/codelab2/index.html
@@ -171,7 +171,7 @@ public class Canvas extends javax.swing.JPanel {
 <p>Afegeix al mètode  <code>main</code>  el següent codi:</p>
 <pre><code>Canvas.draw(sun);</code></pre>
 <h2 is-upgraded>Executa el programa</h2>
-<p>Polsa sobre el botó <code>Run</code>:</p>
+<p>Polsa sobre el botó <code>Run</code> (o <code>Mayus+F10</code>):</p>
 <p class="image-container"><img style="width: 196.00px" src="img\5b594bb33856b06a.png"></p>
 
 
