--- a/mp03/codelab4/index.html
+++ b/mp03/codelab4/index.html
@@ -32,6 +32,7 @@
 <p>Un algorisme és un conjunt finit d&#39;instruccions o passos que serveixen per a executar una tasca o resoldre un problema. En la vida quotidiana, s&#39;empren algorismes en multitud d&#39;ocasions per a resoldre diversos problemes, com per exemple per posar una rentadora (conjunt d&#39;instruccions enganxades a la tapa de la màquina), per tocar un instrument musical (partitures), per construir un aeroplà a escala (expressats en les instruccions), per fer trucs de màgia (passos per a fer el truc) o, fins i tot, per a fer receptes de cuina (passos de la recepta).</p>
 <p>Hi ha moltes formes de descriure algoritmes, incloent-hi el llenguatge humà, el pseudocodi, els diagrames de flux o els llenguatges de programació.</p>
 <p>En aquest CodeLab aprendrem a descriure algoritmes amb diagrames de flux, implementant el joc: &#34;Guess the number!&#34;</p>
+<p class="image-container"><img style="width: 482.00px" src="img\5d4bf26df2a9e3dd.gif"></p>
 
 
       </google-codelab-step>
