--- a/mp08/p7/index.html
+++ b/mp08/p7/index.html
@@ -29,6 +29,7 @@
     
       <google-codelab-step label="Introducción" duration="0">
         <p>Room proporciona una capa de abstracción para facilitar el acceso a bases de datos SQLite.</p>
+<p>Construiremos una aplicación de tipo Tareas Pendientes (TODO-List). Este tipo de aplicaciones son consideradas el HelloWorld de los <em>frameworks</em>.</p>
 <p class="image-container"><img style="width: 242.00px" src="img\dedd81415125f61f.gif"></p>
 <p>Get the full code: <a href="https://github.com/gerardfp/room" target="_blank">https://github.com/gerardfp/room</a> </p>
 
