--- a/mp08/p7/index.html
+++ b/mp08/p7/index.html
@@ -101,7 +101,7 @@ public class Tarea {
        this.prioridadId = prioridadId;
    }
 }</code></pre>
-<p>Para el campo fecha, se podría usar un </p>
+<p>Para el campo fecha, se debería usar un </p>
 <pre>TypeConverter</pre>
 <p> para convertir automáticamente entre Date y Long.</p>
 <p><a href="https://developer.android.com/training/data-storage/room/referencing-data" target="_blank">https://developer.android.com/training/data-storage/room/referencing-data</a></p>
