--- a/mp08/p7/index.html
+++ b/mp08/p7/index.html
@@ -29,6 +29,7 @@
     
       <google-codelab-step label="Introducción" duration="0">
         <p>Room proporciona una capa de abstracción para facilitar el acceso a bases de datos SQLite.</p>
+<p class="image-container"><img style="width: 269.00px" src="img\3f9c35efb7f58df1.png"></p>
 <p>Construiremos una aplicación de tipo Tareas Pendientes (TODO-List). Este tipo de aplicaciones son consideradas el HelloWorld de los <em>frameworks</em>.</p>
 <p class="image-container"><img style="width: 242.00px" src="img\dedd81415125f61f.gif"></p>
 <p>Get the full code: <a href="https://github.com/gerardfp/room" target="_blank">https://github.com/gerardfp/room</a> </p>
@@ -76,7 +77,6 @@ FROM Tarea JOIN Prioridad ON Tarea.prioridadId = Prioridad.id</code></pre>
 <li><a href="https://developer.android.com/training/data-storage/room/accessing-data.html" target="_blank"><strong>DAO:</strong></a> contiene los métodos con las <strong>consultas</strong> utilitzados para acceder a la base de datos</li>
 <li><a href="https://developer.android.com/reference/android/arch/persistence/room/Database.html" target="_blank"><strong>Base de datos:</strong></a> contiene el manejador de la base de datos.</li>
 </ul>
-<p>.<img style="width: 269.00px" src="img\3f9c35efb7f58df1.png"></p>
 <h2 is-upgraded>Entidades</h2>
 <p>Son las tablas y vistas de nuestra base de datos. Se crea una clase por cada tabla o vista. Se anotan dichas clases con <code>@Entity</code>.</p>
 <p><code>Tarea.java</code></p>
