--- a/mp08/p7/index.html
+++ b/mp08/p7/index.html
@@ -50,9 +50,9 @@ annotationProcessor &#39;androidx.room:room-compiler:2.1.0&#39;</code></pre>
 <p class="image-container"><img style="width: 558.00px" src="img\c0c32b9abf647e05.gif"></p>
 <p>Dependencia en el archivo <code>build.gradle (Module: app)</code></p>
 <pre><code>implementation &#39;androidx.lifecycle:lifecycle-extensions:2.1.0&#39;</code></pre>
-<h2 is-upgraded>RecyclerView i Material</h2>
+<h2 is-upgraded>RecyclerView y Material</h2>
 <p>La lista de tareas se mostrará en la Activity usando un <code>RecyclerView</code></p>
-<p>Para ir a la Activity de añadir una Tarea pulsaremos sobre el <code>FloatingActingButton</code>.</p>
+<p>Para ir a la Activity de añadir una Tarea habrá un <code>FloatingActingButton</code>.</p>
 <pre><code>implementation &#39;androidx.recyclerview:recyclerview:1.0.0&#39;
 implementation &#39;com.google.android.material:material:1.0.0&#39;</code></pre>
 
