--- a/mp08/p7/index.html
+++ b/mp08/p7/index.html
@@ -60,7 +60,7 @@ implementation &#39;com.google.android.material:material:1.0.0&#39;</code></pre>
       </google-codelab-step>
     
       <google-codelab-step label="Análisis de la app" duration="0">
-        <p>La app guardará los datos en dos tablas: <code>tareas</code> i <code>prioridades</code>.</p>
+        <p>La app guardará los datos en dos tablas: <code>tareas</code> y <code>prioridades</code>.</p>
 <p class="image-container"><img style="width: 513.00px" src="img\484d03b25aac4a8e.png"></p>
 <p>Para obtener cada Tarea con el detalle de su prioridad, necesitaremos la siguiente Vista (consulta):</p>
 <pre><code>SELECT Tarea.id, Tarea.descripcion, Tarea.fecha, Prioridad.descripcion AS prioridad 
