--- a/mp08/p7/index.html
+++ b/mp08/p7/index.html
@@ -437,7 +437,7 @@ public class MainActivity extends AppCompatActivity {
        app:srcCompat=&#34;@android:drawable/ic_input_add&#34; /&gt;
 
 &lt;/androidx.coordinatorlayout.widget.CoordinatorLayout&gt;</code></pre>
-<p><code>Viewholder_tarea.xml</code></p>
+<p><code>viewholder_tarea.xml</code></p>
 <p class="image-container"><img style="width: 275.00px" src="img\2968860254e0a94c.png"></p>
 <pre><code>&lt;?xml version=&#34;1.0&#34; encoding=&#34;utf-8&#34;?&gt;
 &lt;LinearLayout xmlns:android=&#34;http://schemas.android.com/apk/res/android&#34;
